@@ -1,3 +1,7 @@
+2004-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Updated babelfish web scraping for translate menu.
+
 2004-05-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl (::tkchat::msgSend): convert msg to utf-8 if necessary
